SERVER-104401 Inherit expCtx->needsMerge() value in DocumentSourceGroup::create() (#36489)

Co-authored-by: Lee Maguire <lee.maguire@mongodb.com>
GitOrigin-RevId: b51ea166b80938aab06d5b996941cd5a1b8121ba