src/mongo/db/pipeline/document_source_internal_unpack_bucket_test/group_reorder_test.cpp
@@ -153,17 +153,38 @@ TEST_F(InternalUnpackBucketGroupReorder, OptimizeForCountNegative) {
 // referencing the metaField, a constant expression, and/or for fixed buckets $dateTrunc expression
 // on the timeField
 TEST_F(InternalUnpackBucketGroupReorder, MinMaxGroupOnMetadata) {
-    auto groupSpecObj =
-        fromjson("{$group: {_id: '$meta1.a.b', accmin: {$min: '$b'}, accmax: {$max: '$c'}}}");
+    {
+        auto groupSpecObj =
+            fromjson("{$group: {_id: '$meta1.a.b', accmin: {$min: '$b'}, accmax: {$max: '$c'}}}");
 
-    auto serialized = makeAndOptimizePipeline(
-        getExpCtx(), {groupSpecObj}, 3600 /* bucketMaxSpanSeconds */, false /* fixedBuckets */);
-    ASSERT_EQ(1, serialized.size());
+        auto serialized = makeAndOptimizePipeline(
+            getExpCtx(), {groupSpecObj}, 3600 /* bucketMaxSpanSeconds */, false /* fixedBuckets */);
+        ASSERT_EQ(1, serialized.size());
 
-    auto optimized = fromjson(
-        "{$group: {_id: '$meta.a.b', accmin: {$min: '$control.min.b'}, accmax: {$max: "
-        "'$control.max.c'}, $willBeMerged: false}}");
-    ASSERT_BSONOBJ_EQ(optimized, serialized[0]);
+        auto optimized = fromjson(
+            "{$group: {_id: '$meta.a.b', accmin: {$min: '$control.min.b'}, accmax: {$max: "
+            "'$control.max.c'}, $willBeMerged: false}}");
+        ASSERT_BSONOBJ_EQ(optimized, serialized[0]);
+    }
+
+    {
+        // Ensure that $willBeMerged is copied into the rewritten $group stage.
+        auto groupSpecObj = fromjson(
+            "{$group: {_id: '$meta1.a.b', accmin: {$min: '$b'}, accmax: {$max: '$c'}, "
+            "$willBeMerged: "
+            "true}}");
+
+        auto serialized = makeAndOptimizePipeline(
+            getExpCtx(), {groupSpecObj}, 3600 /* bucketMaxSpanSeconds */, false /* fixedBuckets */);
+        ASSERT_EQ(1, serialized.size());
+
+        // $willBeMerged will only be serialized when it is set to false & we are not already
+        // merging.
+        auto optimized = fromjson(
+            "{$group: {_id: '$meta.a.b', accmin: {$min: '$control.min.b'}, accmax: {$max: "
+            "'$control.max.c'}}}");
+        ASSERT_BSONOBJ_EQ(optimized, serialized[0]);
+    }
 }
 
 // Test SERVER-73822 fix: complex $min and $max (i.e. not just straight field refs) work correctly.
